--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,12 @@
+  body {
+            margin: 0;
+        }
+
 img{
     width: 50px;
     height: 50px;
 }
+
+   #my-canvas {
+            border: 1px solid blue;
+        }
