--- a/css/main.css
+++ b/css/main.css
@@ -10,14 +10,18 @@
 .imgs-container{
     display: grid; 
     grid-template-columns: repeat(auto-fill,400px);
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 15px;
+    grid-gap: 25px;
     border: 1px solid red;
+
+    /* display: flex;
+    flex-wrap: wrap; */
+
 }
   
   img {
     border: 1px solid red;
-    width: 100%;
+    width: 400px;
+    height: 300px;
   }
 
 
