--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,16 @@
     display: grid; 
     grid-template-columns: repeat(auto-fill,400px);
     grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 15px;
+    grid-gap: 25px;
     border: 1px solid red;
 }
   
   img {
     border: 1px solid red;
-    width: 100%;
+    width: 400px;
+    height: 300px;
   }
 
 
-  
+
+
