--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,7 @@
         }
 
 
-   #my-canvas {
-            border: 1px solid blue;
-        }
+
 
 .imgs-container{
     display: grid; 
@@ -23,5 +21,32 @@
   }
 
 
+     #my-canvas {
+            border: 1px solid blue;
+        }
 
+.nav-bar {
+    width: 100vw;
+    height: 50px;
+    background: black;
+}
 
+.userChoice{
+ width: 100px;
+ height: 100px;
+}
+
+/* helpers */
+
+.flex{
+  display: flex;
+}
+
+.align-both {
+    justify-content: center;
+    align-items: center;
+}
+
+.download{
+  margin-left: 20px;
+}
