--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
   body {
             margin: 0;
+            height: 100vh;
+            width: 100vw;
+            background-color: gray;
         }
 
 
@@ -8,20 +11,28 @@
         }
 
 .imgs-container{
-    display: grid; 
-    grid-template-columns: repeat(auto-fill,400px);
-    grid-gap: 25px;
+    margin: 0 auto;
+    width: 90%;
+    display: flex; 
+    flex-wrap: wrap;
     border: 1px solid red;
+    /* text-align: center; */
 
    
 }
   
   img {
     border: 1px solid red;
-    width: 400px;
-    height: 300px;
+    margin: 8px;
+    height: 20vh;
+    width: 10vw;
   }
+  
 
-
-
+  header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+  }
 
