--- a/css/helpers.css
+++ b/css/helpers.css
@@ -14,3 +14,13 @@
 .space-between {
   justify-content: space-between;
 }
+
+.clean-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.align-center {
+  align-items: center;
+}
