Bonuses  upload and share

--- a/css/canvas.css
+++ b/css/canvas.css
@@ -45,6 +45,10 @@ body.rtl{
     margin-left: 20px;
  }
 
+ .upload{
+    margin-left: 20px;
+    margin-left: 20px;
+ }
 
 .control-box{
  /* width: 100px; */
