--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,8 +1,14 @@
+  
+  @font-face {
+    font-family: Lato;
+    src: url('../fonts/lato/Lato-Regular.ttf');
+}
+  
   body {
              margin: 0;
             height: 100vh;
             width: 100vw;
-            background-color:whitesmoke; 
+            background-color:white; 
   }
 
 .imgs-container{
@@ -17,14 +23,14 @@
     width: 100%;
     height: 100%;
   }
-  a{
+   .gallery-item{
     margin:10px;
-    width: 20%;
+    width: 10%;
     border :5px solid #0b0b0b;
     transition: transform .3s ease-out;
   }
 
-  a:hover {
+  .gallery-item:hover {
     transform: scale(1.1)
   
   }
@@ -36,7 +42,21 @@
     background-color: #2eb398;
     color: white;
   }
+  .list-item{
+    text-decoration: none;
+    height: 55px;
+    margin: 10px;
+    color:#c2c2c2;
+    font-family: Lato;
+    padding: 20px
+  }
 
+   .list-item:hover{
+     color:#2f937f
+   }
+  nav{
+    background: #323232
+  }
   
   .words li {
     color: #fff;
@@ -49,4 +69,16 @@
     cursor: pointer;
   }
   
+  .search-container{
+    background-color: #2eb398;
+    color: white;
+
+  }
+
+  
+
+
+  
+
+
   
