--- a/css/gallery.css
+++ b/css/gallery.css
@@ -24,8 +24,10 @@ html {
     flex-direction: column;
     align-items: center;
     padding-bottom: 50px;
-    background-color: #2eb398;
+    background: #323232;
     color: white;
+    font-family: Lato;
+    
   }
   .list-item{
     text-decoration: none;
@@ -61,10 +63,20 @@ html {
 
   
 .contact{
-
+  margin: 0;
   height: 500px;
   background-color: #323232;
 }
+
+h4 ,h6 {
+  margin-top :0;
+}
+
+
+form *{
+  background-color: #fd005f
+}
+
 
   
 
