--- a/css/gallery.css
+++ b/css/gallery.css
@@ -135,45 +135,6 @@ html {
     visibility: visible
 }
 
-/**** Responsive wizardry ****/
-
-@media(max-width: 1100px){
-  .container{
-    grid-template-columns: repeat(8, 100px);
-    width: 830px
-  }
-.item:nth-child(7n+1){ grid-column-start: 1;}
-.item:nth-child(7n+2){ grid-column-start: 3;}
-.item:nth-child(7n+3){ grid-column-start: 5;}
-.item:nth-child(7n+4){ grid-column-start: 7;}
-.item:nth-child(7n+5){ grid-column-start: 2;}
-.item:nth-child(7n+6){ grid-column-start: 4;}
-.item:nth-child(7n){ grid-column-start: 6;}
-}
-
-@media(max-width: 850px){
-  .container{
-    grid-template-columns: repeat(6, 100px);
-    width: 620px
-  }
-.item:nth-child(5n+1){ grid-column-start: 1;}
-.item:nth-child(5n+2){ grid-column-start: 3;}
-.item:nth-child(5n+3){ grid-column-start: 5;}
-.item:nth-child(5n+4){ grid-column-start: 2;}
-.item:nth-child(5n){ grid-column-start: 4;}
-}
-
-@media(max-width: 720px){
-  .container{
-  grid-template-columns: repeat(4, 100px);
-    width: 410px;
-  }
-  .item:nth-child(3n+1){ grid-column-start: 1;}
-  .item:nth-child(3n+2){ grid-column-start: 3;}
-  .item:nth-child(3n){ grid-column-start: 2;}
-}
-
-
 
 
 
@@ -239,7 +200,7 @@ textarea {
 
 .second-msg{
   color: white;
-  font-size: 20px;
+  font-size: 1rem;
 }
 
 footer{
@@ -247,5 +208,57 @@ footer{
   height: 40px;
   background-color: #222222;
   border-top: 1px solid white;
+
+}
+
+/**** Responsive wizardry ****/
+
+@media(max-width: 1100px){
+  .container{
+    grid-template-columns: repeat(8, 100px);
+    width: 830px
+  }
+.item:nth-child(7n+1){ grid-column-start: 1;}
+.item:nth-child(7n+2){ grid-column-start: 3;}
+.item:nth-child(7n+3){ grid-column-start: 5;}
+.item:nth-child(7n+4){ grid-column-start: 7;}
+.item:nth-child(7n+5){ grid-column-start: 2;}
+.item:nth-child(7n+6){ grid-column-start: 4;}
+.item:nth-child(7n){ grid-column-start: 6;}
+
+header ,nav , .search-container ,.contact-container ,footer{
+  width: 1100px;
+}
+}
+
+@media(max-width: 850px){
+  .container{
+    grid-template-columns: repeat(6, 100px);
+    width: 620px;
+  }
+  .item:nth-child(5n+1){ grid-column-start: 1;}
+  .item:nth-child(5n+2){ grid-column-start: 3;}
+  .item:nth-child(5n+3){ grid-column-start: 5;}
+  .item:nth-child(5n+4){ grid-column-start: 2;}
+  .item:nth-child(5n){ grid-column-start: 4;}
+  header ,nav ,.search-container ,.contact-container,footer{
+
+    width: 850px;
+  }
+
+}
+
+@media(max-width: 720px){
+  .container{
+  grid-template-columns: repeat(4, 100px);
+    width: 410px;
+  }
+  .item:nth-child(3n+1){ grid-column-start: 1;}
+  .item:nth-child(3n+2){ grid-column-start: 3;}
+  .item:nth-child(3n){ grid-column-start: 2;}
+
+  header, nav,.search-container ,.contact-container ,footer{
+     width: 720px;
+  }
 
 }
