--- a/css/canvas.css
+++ b/css/canvas.css
@@ -98,7 +98,9 @@ input[type=text] {
   margin: 6px 0;
   box-sizing: border-box;
   border: none;
-  border-bottom: 6px solid #2f937f ;
+    border-radius: 10px;
+
+  border-bottom: 4px solid #2f937f ;
 }
 
 nav-bar a {
