--- a/css/canvas.css
+++ b/css/canvas.css
@@ -70,10 +70,61 @@ select {
   background-color: #f1f1f1;
 }
 
-.upload {
+/* .upload {
   margin-left: 20px;
   margin-left: 20px;
   cursor: pointer;
+} */
+
+.upload {
+	/* width: 0.1px; */
+	/* height: 0.1px; */
+	/* opacity: 0; */
+	/* overflow: hidden; */
+	/* position: absolute; */
+	/* z-index: -1; */
+} 
+
+  .upload  {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: black;
+    display: inline-block;
+    cursor: pointer;
+} 
+
+
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: 'Select file';
+  display: inline-block;
+  background: linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+    background-color: #f1f1f1;
+
+}
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+
+.canvas{
+    justify-content: center;
+
 }
 
 .control-box {
@@ -140,10 +191,15 @@ nav-bar a {
     margin-left: 55px;
   }
 
-  .upload {
+  /* .upload {
     margin-left: 5px;
     margin-left: 5px;
-  }
+  } */
+
+
+
+
+
 
   .download {
     margin-left: 0;
@@ -205,5 +261,10 @@ nav-bar a {
   }
   .canvas{
    max-width: 300px;
+  }
+
+  .nav-bar{
+    justify-content: center;
+
   }
 }
