--- a/css/gallery.css
+++ b/css/gallery.css
@@ -244,6 +244,7 @@ header ,nav , .search-container ,.contact-container ,footer{
   .head-page ,.search-container ,.contact-container,footer{
 
    /* min-width: 100vw; */
+   width: 100%;
   }
 
 }
@@ -260,6 +261,7 @@ header ,nav , .search-container ,.contact-container ,footer{
 
   .head-page, .search-container ,.contact-container ,footer{
       /* min-width: 100vw; */
+      width: 100%;
   }
  
 }
@@ -277,6 +279,7 @@ header ,nav , .search-container ,.contact-container ,footer{
   head-page, .search-container ,.contact-container ,footer{
     /* min-width: 100vw; */
     /* width: 650px; */
+    width: 100%;
 }
 
 }
